[gd_scene load_steps=47 format=3 uid="uid://b62wvp16qmq26"]

[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/Level2/Scene2.gd" id="1_yvspv"]
[ext_resource type="Texture2D" uid="uid://b1rpij5tbokek" path="res://Assets/wood-floor-texture.jpg" id="2_elt6a"]
[ext_resource type="PackedScene" uid="uid://cab8vsxfvdlyp" path="res://Models/wall_2.tscn" id="3_jg47h"]
[ext_resource type="PackedScene" uid="uid://f2m020rkfxxk" path="res://Models/wall_half_2.tscn" id="4_5sfy7"]
[ext_resource type="PackedScene" uid="uid://dxk2xnnaqsm1r" path="res://Models/cactus_small_highlighted.tscn" id="9_nw7vi"]
[ext_resource type="PackedScene" uid="uid://cong4g7rdkbeq" path="res://Models/book_set_shadow.tscn" id="10_rvbcf"]
[ext_resource type="PackedScene" uid="uid://chfeieccev0x" path="res://Assets/furniture_gltf/shelf_B_large.gltf" id="11_54ibt"]
[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="15_7mqg5"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="16_d6byp"]
[ext_resource type="PackedScene" uid="uid://buie6tti5cc74" path="res://Assets/furniture_gltf/pictureframe_large_B.gltf" id="17_63h8i"]
[ext_resource type="Texture2D" uid="uid://d1otjyenwnjch" path="res://Assets/doctor_small.png" id="17_pknmw"]
[ext_resource type="PackedScene" uid="uid://c7rl43ny1r8ko" path="res://Assets/furniture_gltf/rug_rectangle_stripes_B.gltf" id="18_hph27"]
[ext_resource type="Texture2D" uid="uid://bby7f4r51xmcq" path="res://Assets/doctor.png" id="18_lg6mi"]
[ext_resource type="PackedScene" uid="uid://dd0djwd8mdnon" path="res://Assets/furniture_gltf/armchair_pillows.gltf" id="19_3xpt3"]
[ext_resource type="AnimationLibrary" uid="uid://6wfnd4e8os6" path="res://ThemeEditor/Tornado.res" id="19_eetdc"]
[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/TornadoAnimation.gd" id="19_yvm06"]
[ext_resource type="PackedScene" uid="uid://dq3pf64gjvndt" path="res://Models/candle_triple_2_shadow.tscn" id="20_c3he5"]
[ext_resource type="Texture2D" uid="uid://b44cm735rk4s2" path="res://Assets/glow_circle3.png" id="20_rvu2g"]
[ext_resource type="Texture2D" uid="uid://ec716c3waxhg" path="res://Assets/blur_white_dot40.png" id="21_7cl7a"]
[ext_resource type="PackedScene" uid="uid://dqirtc8pcrwyo" path="res://Models/lamp_table_2_shadow.tscn" id="21_mupap"]
[ext_resource type="AudioStream" uid="uid://b7fq447cj33d4" path="res://Assets/wind-blowing-trimmed2.mp3" id="22_yxgex"]
[ext_resource type="PackedScene" uid="uid://c3nxy0qc8sv25" path="res://Models/cactus_small_shadow.tscn" id="23_ayqpn"]
[ext_resource type="PackedScene" uid="uid://dpia4tua0yqo1" path="res://Assets/furniture_gltf/cabinet_medium.gltf" id="24_fwjwy"]
[ext_resource type="PackedScene" uid="uid://biwigd8qmfw86" path="res://Models/lamp_table_highlighted.tscn" id="25_ypq4i"]
[ext_resource type="PackedScene" uid="uid://cxf0n4d88c5lp" path="res://Models/book_set_highlighted.tscn" id="26_1h0tj"]
[ext_resource type="PackedScene" uid="uid://crs4akxmgfs8h" path="res://Models/candle_triple_2_highlighted.tscn" id="27_xmlm3"]
[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/ObjectsAnimation.gd" id="28_xuhfu"]
[ext_resource type="AudioStream" uid="uid://d1rxlluort1mq" path="res://Assets/fireworks2.mp3" id="29_kxag2"]
[ext_resource type="AnimationLibrary" uid="uid://dl7o1kwn6d6oh" path="res://ThemeEditor/Confetti.res" id="30_1dppj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b4xlg"]
size = Vector3(30, 1, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iqnrd"]
albedo_texture = ExtResource("2_elt6a")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxMesh" id="BoxMesh_bjeso"]
material = SubResource("StandardMaterial3D_iqnrd")
size = Vector3(80, 2, 80)

[sub_resource type="Animation" id="Animation_elh4p"]
length = 0.001

[sub_resource type="Animation" id="Animation_jgm4a"]
resource_name = "objects_moving"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lamp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(5.90124, 7.26404, 0.441528), Vector3(-6.53373, 4.7078, 0.441528), Vector3(-4.93357, 11.6263, -6.54904), Vector3(-6.31238, 11.7726, -9.69737), Vector3(-6.583, 14.4834, 2.81498), Vector3(-6.95509, 2.44156, 0.441528)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lamp/lamp_table2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.498921, -0.186842, 0.80225), Vector3(-1.26441, -1.86678, -2.41243), Vector3(-0.860669, -2.13426, -2.86077), Vector3(0.918784, 2.4027, 0.987227), Vector3(-1.00835, 2.31306e-08, -1.16544)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Books:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(12.0347, 8.06846, 2.23252), Vector3(-0.634129, 13.0821, 2.92166), Vector3(-10.1643, 10.4357, 3.74236), Vector3(7.56464, 12.4135, 6.72932), Vector3(-10.1893, 9.44782, -7.70023), Vector3(3.36795, 0.606165, 6.17045)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Books/book_set2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.442217, -0.798978, -0.00866824), Vector3(0.624554, 1.23125, 2.86467), Vector3(-1.04448, -0.83548, 2.10834), Vector3(-0.347298, 1.57147, -0.170271), Vector3(-0.624997, -0.197427, -0.0172098)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Candle:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-2.46469, 13.0117, -10.9971), Vector3(-10.6356, 12.6616, -1.56446), Vector3(3.35503, 12.0275, 6.97062), Vector3(-7.99958, 11.5352, 7.22059), Vector3(-5.6691, 12.1345, -7.84256), Vector3(-2.46469, -0.0526896, 7.89907)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Candle/candle_triple2:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.339115, -0.137158, -1.18429), Vector3(0.27448, 1.33725, -0.36568), Vector3(-0.75066, -0.436197, -0.767335), Vector3(0.151212, 1.21843, 0.482301), Vector3(-1.03831, 6.44364e-08, -0.697643)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cactus:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.927729, 13.0523, -8.43216), Vector3(-0.0245485, 9.17572, 5.51242), Vector3(4.2689, 12.0085, -1.58269), Vector3(-7.51793, 3.59592, -0.56578), Vector3(9.00947, 9.71804, 6.41993), Vector3(-10.7035, 0.825585, -0.000446796)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cactus/cactus_small_A2:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1, 1.7, 2.5, 3.2, 4.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.360978, 1.17133, 0.830687), Vector3(-0.0708918, -1.10162, 0.717993), Vector3(-0.990768, -1.50722, 0.209589), Vector3(-0.785935, -0.724002, 0.179122), Vector3(0.0455052, 2.16554, -0.409254)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ws4m"]
_data = {
"RESET": SubResource("Animation_elh4p"),
"objects_moving": SubResource("Animation_jgm4a")
}

[sub_resource type="Curve" id="Curve_omj66"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 12.8571), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ixsyn"]
max_value = 2.05
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.506494, 0.946154), 1.45833, 1.45833, 0, 0, Vector2(1, 2.05), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_5jusw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.00892866), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_gmrlv"]
_data = [Vector2(0.00865801, 0.197802), 0.0, 0.0, 0, 0, Vector2(0.982684, 0.879121), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4n3x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v8j3k"]
height = 1.70022
radius = 0.223747

[sub_resource type="BoxShape3D" id="BoxShape3D_p63cc"]
size = Vector3(1.23987, 0.847168, 0.878052)

[sub_resource type="SphereShape3D" id="SphereShape3D_m3c2c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xcq16"]
radius = 0.624242

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m4r6v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_d8atu"]

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.08352, 0)
script = ExtResource("1_yvspv")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00996, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_b4xlg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_bjeso")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.390804, -0.906769, -0.158252, 0.728786, -0.409831, 0.548553, -0.562267, 0.0990449, 0.821003, -26.0655, 34.8897, 25.4685)
shadow_enabled = true

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.70474, 0.359718, -0.61151, 0.0694738, 0.822797, 0.564073, 0.706056, -0.440008, 0.554867, 0, 0.490025, 2.9982)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(0.998831, 0.0215947, 0.0432516, -0.0288492, 0.984173, 0.174847, -0.0387913, -0.175891, 0.983645, -1.17631, 9.25302, 20.3844)
size = 28.159

[node name="ObjectsAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ws4m")
}
script = ExtResource("28_xuhfu")

[node name="Tornado" type="Area2D" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0.546421)
position = Vector2(50, 947)

[node name="TornadoAnimation" type="AnimationPlayer" parent="Tornado"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_7ws4m"),
"Tornado": ExtResource("19_eetdc")
}
script = ExtResource("19_yvm06")

[node name="tornado" type="CPUParticles2D" parent="Tornado"]
scale = Vector2(1, 0.5)
amount = 15
lifetime = 0.5
texture = ExtResource("20_rvu2g")
gravity = Vector2(0, -5000)
angular_velocity_min = -720.0
angular_velocity_max = -503.3
angular_velocity_curve = SubResource("Curve_omj66")
scale_amount_curve = SubResource("Curve_ixsyn")

[node name="dots" type="CPUParticles2D" parent="Tornado"]
amount = 30
texture = ExtResource("21_7cl7a")
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
gravity = Vector2(0, -300)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.1
linear_accel_min = 100.0
linear_accel_max = 100.0
scale_amount_curve = SubResource("Curve_5jusw")

[node name="WindAudio" type="AudioStreamPlayer2D" parent="Tornado"]
stream = ExtResource("22_yxgex")

[node name="VoltarButton" type="Button" parent="."]
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("15_7mqg5")
text = " Voltar"
icon = ExtResource("16_d6byp")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -342.0
offset_top = 27.0
offset_right = -20.0
offset_bottom = 112.0
grow_horizontal = 0
theme = ExtResource("15_7mqg5")
max_value = 3.0
show_percentage = false

[node name="AjudaButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -172.0
offset_right = -55.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("15_7mqg5")
text = " Ajuda"
icon = ExtResource("17_pknmw")

[node name="BoxContainer2" type="BoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Doctor" type="Sprite2D" parent="BoxContainer2"]
visible = false
position = Vector2(-347, -347)
texture = ExtResource("18_lg6mi")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Confetti" type="Node2D" parent="BoxContainer"]
modulate = Color(1, 1, 1, 0)

[node name="Green" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -140)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.794791, 0.780768, 0.238602, 1)

[node name="Green2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 181)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_gmrlv")
color = Color(0.794791, 0.780768, 0.238602, 1)

[node name="FireworksPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_kxag2")

[node name="ConfettiPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s4n3x"),
"Confetti": ExtResource("30_1dppj")
}

[node name="SceneBG" type="Node3D" parent="."]
transform = Transform3D(5.96782, 0, -4.90202, 0, 7.723, 0, 4.90202, 0, 5.96782, -11.019, -0.343, -21.372)

[node name="wall3" parent="SceneBG" instance=ExtResource("3_jg47h")]

[node name="wall4" parent="SceneBG" instance=ExtResource("3_jg47h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7977, 0, -0.0116293)

[node name="wall_half3" parent="SceneBG" instance=ExtResource("4_5sfy7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.59617, 0, -0.0220425)

[node name="pictureframe_large_B2" parent="SceneBG" instance=ExtResource("17_63h8i")]
transform = Transform3D(0.764479, 0, 5.96046e-08, 0, 0.76448, 0, -5.96046e-08, 0, 0.764479, 4.06397, 1.63908, 0.183991)

[node name="rug_rectangle_stripes_B2" parent="SceneBG" instance=ExtResource("18_hph27")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38805, 0, 1.50198)

[node name="armchair_pillows2" parent="SceneBG" instance=ExtResource("19_3xpt3")]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0.569827, 0, 0.976271)

[node name="Shadows" type="Node3D" parent="."]
visible = false

[node name="book_set2_shadow" parent="Shadows" instance=ExtResource("10_rvbcf")]
transform = Transform3D(3.37777, 0, -3.17594, 0, 4.63637, 0, 3.17594, 0, 3.37777, 12.0347, 8.06846, 2.23252)

[node name="candle_triple2_shadow" parent="Shadows" instance=ExtResource("20_c3he5")]
transform = Transform3D(2.56688, 0, 0, 0, 2.56688, 0, 0, 0, 2.56688, -2.46469, 13.0117, -10.9971)

[node name="lamp_table2_shadow" parent="Shadows" instance=ExtResource("21_mupap")]
transform = Transform3D(3.81117, 0, 0, 0, 3.81117, 0, 0, 0, 3.81117, 5.90124, 7.26404, 0.441528)

[node name="cactus_small_A2_shadow" parent="Shadows" instance=ExtResource("23_ayqpn")]
transform = Transform3D(4.9429, 0, -3.42594, 0, 6.01409, 0, 3.42594, 0, 4.9429, 0.919051, 13.0523, -8.50082)

[node name="Shelf" type="CharacterBody3D" parent="."]
transform = Transform3D(0.775143, 0, -0.631786, 0, 1, 0, 0.631786, 0, 0.775143, -1.94892, 12.1275, -11.214)

[node name="shelf_B_large2" parent="Shelf" instance=ExtResource("11_54ibt")]
transform = Transform3D(10.4484, 0, -1.19209e-07, 0, 8.95513, 0, 3.8147e-06, 0, 3.35496, -1.51401, 0, -0.477252)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Shelf"]
transform = Transform3D(0.191002, 10.9425, 0, -10.9425, 0.191002, -5.75593e-09, 0, 1.90735e-06, 10.9442, -0.431858, 0.459572, 1.38334)
visible = false
shape = SubResource("CylinderShape3D_v8j3k")

[node name="Cabinet" type="CharacterBody3D" parent="."]
transform = Transform3D(0.792311, 0, -0.610118, 0, 1, 0, 0.610118, 0, 0.792311, 9.95256, 0.0956881, 2.48988)

[node name="cabinet_medium2" parent="Cabinet" instance=ExtResource("24_fwjwy")]
transform = Transform3D(6.95106, 0, 0, 0, 6.95106, 0, 0, 0, 6.95106, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cabinet"]
transform = Transform3D(10.4733, 0, 1.90735e-06, 0, 10.4733, 0, -1.90735e-06, 0, 10.4733, -0.267838, 2.59661, -0.638597)
visible = false
shape = SubResource("BoxShape3D_p63cc")

[node name="Lamp" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.90124, 7.26404, 0.441528)

[node name="lamp_table2" parent="Lamp" instance=ExtResource("25_ypq4i")]
transform = Transform3D(3.81117, 0, 0, 0, 3.81117, 0, 0, 0, 3.81117, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lamp"]
transform = Transform3D(4.26407, 0, 0, 0, 4.26407, 0, 0, 0, 4.26407, 1.42857, 1.79938, 0)
visible = false
shape = SubResource("SphereShape3D_m3c2c")

[node name="Books" type="CharacterBody3D" parent="."]
transform = Transform3D(0.728538, 0, -0.685005, 0, 1, 0, 0.685005, 0, 0.728538, 12.0347, 8.06846, 2.23252)

[node name="book_set2" parent="Books" instance=ExtResource("26_1h0tj")]
transform = Transform3D(4.40989, 0, 0, 0, 4.40989, 0, 0, 0, 4.40989, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Books"]
transform = Transform3D(1.72052, -2.2759, -1.70513, 2.2759, -0.0929788, 2.42054, -1.70513, -2.42054, 1.51026, 0, 0, 0)
visible = false
shape = SubResource("SphereShape3D_xcq16")

[node name="Candle" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.918032, -0.396507, 0, 0.396507, 0.918032, -2.46469, 13.0117, -10.9971)

[node name="candle_triple2" parent="Candle" instance=ExtResource("27_xmlm3")]
transform = Transform3D(2.56687, 0, 0, 0, 2.56687, 0, 0, 0, 2.56688, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Candle"]
transform = Transform3D(0.910371, 0.787435, -0.137638, -0.239994, 0.468216, 1.0913, 0.762495, -0.792774, 0.507819, 0.835866, 0.455882, -0.613117)
visible = false
shape = SubResource("CylinderShape3D_m4r6v")

[node name="Cactus" type="CharacterBody3D" parent="."]
transform = Transform3D(0.506335, 0, -0.862337, 0, 1, 0, 0.862337, 0, 0.506335, 0.927729, 13.0523, -8.43216)

[node name="cactus_small_A2" parent="Cactus" instance=ExtResource("9_nw7vi")]
transform = Transform3D(5.943, 0, 0, 0, 5.94299, 0, 0, 0, 5.94299, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cactus"]
transform = Transform3D(3.75224, 0, 4.76837e-07, 0, 3.75224, 0, -4.76837e-07, 0, 3.75224, 0.356005, 1.6295, -1.05812)
visible = false
shape = SubResource("SphereShape3D_d8atu")

[connection signal="pressed" from="VoltarButton" to="." method="_on_voltar_button_pressed"]
[connection signal="pressed" from="AjudaButton" to="." method="_on_ajuda_button_pressed"]
[connection signal="input_event" from="Shelf" to="." method="_on_shelf_input_event"]
[connection signal="input_event" from="Cabinet" to="." method="_on_cabinet_input_event"]
[connection signal="input_event" from="Lamp" to="." method="_on_lamp_input_event"]
[connection signal="input_event" from="Books" to="." method="_on_books_input_event"]
[connection signal="input_event" from="Candle" to="." method="_on_candle_input_event"]
[connection signal="input_event" from="Cactus" to="." method="_on_cactus_input_event"]
